<?xml version="1.0" encoding="utf-8"?>
<!--Copyright 2010 NetCatch Team

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
    <string name="sync_tag">Sync Tag</string>
    <string name="synchronize_description">Synchronize with the web.</string>
    <string name="synchronize">Synchronize</string>
    <string name="internal_player_description">Use the built in media player to play episodes</string>
    <string name="internal_player">Internal Player</string>
    <string name="wifi_only_description">Only download when using wifi</string>
    <string name="wifi_only">Wifi Only</string>
    <string name="queue_only_description">Only download when episode is in the queue</string>
    <string name="queue_only">Queue Only</string>
    <string name="refresh_rate">Refresh Rate</string>
    <string name="download_location">Download Location</string>
    <string name="play">Play</string>
	<string name="hello">Hello World, NCMain!</string>
	<string name="app_name">NetCatch</string>
	<string name="new_show">New Show</string>
	<string name="new_episodes">New Episodes</string>
	<string name="queue">Queue</string>
	<string name="no_subscriptions">No Subscriptions...</string>
	<string name="shows">Shows</string>
	<string name="enter_feed">Enter Feed</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="getting_show_details">Getting Show Details...</string>
	<string name="default_author">Unkown Author</string>
	<string name="default_title">Unkown Title</string>
	<string name="default_date">Unkown Date</string>
	<string name="default_comments">No Description</string>
	<string name="no_episodes">No episodes in feed...</string>
	<string name="nothing_in_queue">Nothing in queue...</string>
	<string name="preferences">Preferences</string>
	<string name="downloading">Downloading</string>
	<string name="download_audio">Download Audio</string>
	<string name="download_only">Only Download Specific Shows</string>
	<string name="download_all">Download Episodes from all shows</string>
	<string name="sync">Sync</string>
	<string name="google_reader">Google Reader</string>
	<string name="gpodder">GPodder.net</string>
	<string name="sync_preferences">Sync Preferences</string>
	<string name="media_player_preferences">Media Player Settings</string>
	<string name="use_widget">Use Widget</string>
	<string name="theme_preference_summary">Set a color overlay for NetCatch</string>
	<string name="theme_preference_title">Set Theme Color</string>
	<string name="null_feed_title">No Feed Data Returned</string>
	<string name="null_feed_info">Null</string>
	<string-array name="main_menu">
		<item>Queue</item>
		<item>New Episodes</item>
		<item>Shows</item>
	</string-array>
	<string name="no_sync">Don\'t Sync</string>
<string name="home">Netcatch Home</string>
<string name="unsubscribe">Unsubscribe</string>
<string name="unsubscribe_question">Unsubscribe from \"</string>
<string name="question_punctuation">\"\?</string>
<string name="unsubscribing_from_show">Unsubscribing from \&quot;</string>
<string name="end_quotation">\&quot;</string>
<string name="move_top">Move to Top</string>
<string name="move_bottom">Move to Bottom</string>
<string name="move_up">Move up</string>
<string name="move_down">Move Down</string>
<string name="download">Download</string>
<string name="delete">Delete</string>
<string name="netcatch_refreshing">NetCatch Refreshing</string>
<string name="no_media_to_download">There was no media to download</string>
<string name="could_not_delete">Problem deleting file</string>
<string name="netcatch_downloading">NetCatch Downloading</string>
</resources>
