<?xml version="1.0" encoding="utf-8"?>
<!--Copyright 2010 NetCatch Team

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/preferences">
	<PreferenceCategory android:title="@string/downloading">
		<ListPreference android:title="@string/refresh_rate"
			android:key="refresh_rate" android:entries="@array/refresh_strings"
			android:entryValues="@array/refresh_values" android:defaultValue="120"></ListPreference>
		<EditTextPreference android:title="@string/download_location" android:key="download_location" android:defaultValue="Podcasts"></EditTextPreference><CheckBoxPreference android:title="@string/download_audio"
			android:defaultValue="true" android:summaryOff="@string/download_only"
			android:summaryOn="@string/download_all" android:key="download"/>
		

	<CheckBoxPreference android:key="wifi_only" android:dependency="download" android:title="@string/wifi_only" android:summary="@string/wifi_only_description" android:defaultValue="true"></CheckBoxPreference>
<CheckBoxPreference android:key="queue_only" android:title="@string/queue_only" android:dependency="download" android:summary="@string/queue_only_description" android:defaultValue="false"></CheckBoxPreference>
</PreferenceCategory>
	<PreferenceCategory android:title="@string/media_player_preferences">
		<Preference android:key="theme_color" android:title="@string/theme_preference_title" android:summary="@string/theme_preference_summary">
			<intent android:action="net.leifandersen.mobile.android.netcatch.activities.ColorChoiceDialogActivity" />
		</Preference>
		
	<CheckBoxPreference android:defaultValue="false" android:title="@string/internal_player" android:summary="@string/internal_player_description" android:key="internal_player"></CheckBoxPreference><CheckBoxPreference android:title="@string/use_widget" android:defaultValue="false" android:key="widget_enable" android:summary="@string/use_widget" android:dependency="internal_player"/>
</PreferenceCategory>
	<PreferenceCategory android:title="@string/sync_preferences">
		<CheckBoxPreference android:title="@string/synchronize" android:key="synchronize" android:defaultValue="false" android:summary="@string/synchronize_description"></CheckBoxPreference><CheckBoxPreference android:title="@string/google_reader"
			android:defaultValue="false" android:summaryOff="@string/no_sync"
			android:summaryOn="@string/sync" android:key="google_reader_sync" android:dependency="synchronize"/>
		<EditTextPreference android:key="google_reader_sync_location" android:dependency="google_reader_sync" android:defaultValue="Podcasts" android:title="@string/sync_tag"></EditTextPreference><CheckBoxPreference android:title="@string/gpodder"
			android:defaultValue="false" android:summaryOff="@string/no_sync"
			android:summaryOn="@string/sync" android:key="gpodder_sync" android:dependency="synchronize"/>
	


</PreferenceCategory>
</PreferenceScreen>
		
