<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
	android:layout_width = "wrap_content"
	android:layout_height = "wrap_content" >
	<TextView android:id = "@+id/title"
		android:layout_width = "fill_parent"
		android:layout_height = "wrap_content"
		android:padding = "5px"
		android:textSize = "20px"
		android:gravity = "center_horizontal"
		android:text = "@string/enter_feed" />
	<EditText android:id = "@+id/edit_text"
		android:layout_width = "fill_parent"
		android:layout_height = "wrap_content"
		android:layout_below = "@id/title"
		android:hint = "@string/enter_feed" />
	<Button android:id = "@+id/ok_button"
		android:layout_width = "wrap_content"
		android:layout_height = "wrap_content"
		android:layout_below = "@id/edit_text"
		android:text = "@string/ok" />
	<Button android:id = "@+id/cancel_button"
		android:layout_width = "wrap_content"
		android:layout_height = "wrap_content"
		android:layout_below = "@id/edit_text"
		android:layout_toRightOf = "@id/ok_button"
		android:text = "@string/cancel" />
</RelativeLayout>
